--- a/functions/report/template/style.css
+++ b/functions/report/template/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
+
 /* Eric Meyer's CSS Reset */
 html, body, div, span, applet, object, iframe,
 h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -97,4 +99,23 @@ h1 {
 .center_table {
   margin-left: auto;
   margin-right: auto;
+}
+
+
+table td,table th {
+	padding-left: 8px
+}
+
+table thead tr {
+	height: 30px;
+	background: #36304a
+}
+
+table tbody tr {
+	height: 30px
+}
+
+.date {
+	text-align: right;
+	padding-right: 8px
 }
